・タイトル画面モック完成 ・メニュー画面作成

--- a/Solomon/Assembly-CSharp.csproj
+++ b/Solomon/Assembly-CSharp.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\Src\Const\Tag.cs" />
      <Compile Include="Assets\Scripts\Src\Util\Log.cs" />
      <Compile Include="Assets\Scripts\Src\Util\Prefab.cs" />
+     <Compile Include="Assets\Scripts\Src\View\MenuView.cs" />
      <Compile Include="Assets\Scripts\Src\View\TitleView.cs" />
      <Compile Include="Assets\Scripts\testScript.cs" />
  <Reference Include="UnityEditor.StandardEvents">
