--- a/Solomon/Assembly-CSharp.csproj
+++ b/Solomon/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Src\Const\Message.cs" />
      <Compile Include="Assets\Scripts\Src\Const\Tag.cs" />
+     <Compile Include="Assets\Scripts\Src\Controller\TitleController.cs" />
      <Compile Include="Assets\Scripts\Src\Util\Log.cs" />
      <Compile Include="Assets\Scripts\Src\Util\Prefab.cs" />
      <Compile Include="Assets\Scripts\Src\View\MenuView.cs" />
